Changing the about page overflow issue

--- a/css/general/about.css
+++ b/css/general/about.css
@@ -110,16 +110,18 @@
 @media (max-width: 768px) {
     .about-me {
         grid-template-columns: 1fr;
+        margin: 0;
     }
 
     .sidebar {
+        width: 80%;
         position: relative;
         top: 10px;
         z-index: -1;
     }
 
     .content {
-        width: 100%;
+        width: 85%;
         padding: 0;
     }
 }
